--- a/basefile.html
+++ b/basefile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
   <head>
-    <title>Gustav Kjellin Design</title>
+    <title>Basefile - Gustav Kjellin</title>
     <!-- Required meta tags-->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -38,16 +38,6 @@
       var currentPage = document.body.id // Fetch current ID from body tag.
       document.getElementById(currentPage + 'NavItem').className += ' active'
     </script>
-    <div class="container-fluid">
-      <div class="container">
-        <div class="col-lg-8 col-lg-offset-2 p-y-3">
-          <h1 class="customItalic">Italic font test</h1>
-          <h1 class="customRegular">Regular font test</h1>
-          <hr><img src="img/index/Banner.svg" class="img-fluid">
-          <hr>
-        </div>
-      </div>
-    </div>
     <!-- jQuery first, then Bootstrap JS.-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js"></script>
