--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <meta name="msapplication-config" content="img/favicons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
   </head>
-  <body id="home">
+  <body id="about">
     <nav class="navbar navbar-light bg-faded nav-container">
       <div class="row p-y-1"><a href="index.html"><img src="img/Logotype.svg" class="img-fluid center-block"></a></div>
       <div class="row">
@@ -37,57 +37,11 @@
       document.getElementById(currentPage + 'NavItem').className += ' active'
     </script>
     <div class="container-fluid p-y-3">
-      <div class="row">
-        <hr>
-        <div class="col-lg-8 col-lg-offset-2 p-y-2">
-          <h3 class="customItalic p-y-2">The portfolio of Gustav Kjellin.</h3>
-          <h3 class="customRegular">I design interfaces, shape brands and craft things for the web.</h3>
-          <h3 class="customRegular p-b-2">These are some of the things I've worked on</h3>
-        </div>
-      </div>
-      <div class="row">
-        <hr>
-      </div>
-    </div>
-    <div class="container-fluid">
-      <div class="col-lg-8 col-lg-offset-2 p-y-3">
-        <h2>DISCLAIMER: This website is very much under construction.</h2>
-      </div>
-      <div class="col-lg-2 col-lg-offset-2">
-        <div class="card"><img src="img/Recent/Apple Watch.png" alt="" class="card-img-top img-fluid">
-          <div class="card-block">
-            <h4 class="card-title">Coach</h4>
-            <p class="card-text">Lorem ipsum</p>
-            <p class="card-text"><small class="text-muted">Design, 2015</small></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-2">
-        <div class="card"><img src="img/Recent/Sunrise.png" alt="" class="card-img-top img-fluid">
-          <div class="card-block">
-            <h4 class="card-title">Sunrise</h4>
-            <p class="card-text">Lorem ipsum</p>
-            <p class="card-text"><small class="text-muted">Design, 2015</small></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-2">
-        <div class="card"><img src="img/Recent/Ball.png" alt="" class="card-img-top img-fluid">
-          <div class="card-block">
-            <h4 class="card-title">Ball</h4>
-            <p class="card-text">Lorem ipsum</p>
-            <p class="card-text"><small class="text-muted">Design, 2016</small></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-2">
-        <div class="card"><img src="img/Recent/22.png" alt="" class="card-img-top img-fluid">
-          <div class="card-block">
-            <h4 class="card-title">22, A Million</h4>
-            <p class="card-text">Lorem ipsum</p>
-            <p class="card-text"><small class="text-muted">Design, 2016</small></p>
-          </div>
-        </div>
+      <div class="col-sm-2 col-md-offset-3"><img src="img/Profile.jpg" class="img-fluid img-circle"></div>
+      <div class="col-sm-4">
+        <h3>About</h3>
+        <p>I'm a 23 year old designer, currently living in Stockholm. Apart from working with design I'm pursuing an M.Sc. in Industrial Engineering and Management at KTH.</p>
+        <p>When I'm not doing design or studying, I'm working with visual merchandising at Apple in Täby Centrum.</p>
       </div>
     </div>
     <!-- jQuery first, then Bootstrap JS.-->
