--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     <meta name="theme-color" content="#ffffff">
   </head>
   <body id="home">
-    <nav class="navbar navbar-light bg-faded nav-container">
-      <div class="row p-y-1"><a href="index.html"><img src="img/Logotype.svg" class="img-fluid center-block"></a></div>
+    <div class="col-lg-12 navigation-top"></div>
+    <nav class="navbar navbar-light bg-light nav-container">
+      <div class="row p-y-1"><a href="index.html" class="logotype-hover"><img src="img/Logotype.svg" class="img-fluid center-block"></a>
+        <h6 class="logotype-text p-t-2">Gustav Kjellin Design</h6>
+      </div>
       <div class="row">
         <ul class="nav navbar-nav nav-justified">
           <li id="homeNavItem" class="nav-item"><a href="index.html" class="nav-link customNavigationItem">HOME</a></li>
@@ -36,59 +39,19 @@
       var currentPage = document.body.id // Fetch current ID from body tag.
       document.getElementById(currentPage + 'NavItem').className += ' active'
     </script>
-    <div class="container-fluid p-y-3">
+    <div class="container-fluid p-y-3 bg-primary">
       <div class="row">
-        <hr>
-        <div class="col-lg-8 col-lg-offset-2 p-y-2">
-          <h3 class="customItalic p-y-2">The portfolio of Gustav Kjellin.</h3>
-          <h3 class="customRegular">I design interfaces, shape brands and craft things for the web.</h3>
-          <h3 class="customRegular p-b-2">These are some of the things I've worked on</h3>
+        <div class="col-lg-4 col-lg-offset-4">
+          <h4 class="p-b-1">Welcome to my portfolio!</h4>
+          <p>I make design stuff for websites, print and advertisement. Below are some of the things I've worked on.</p>
+          <p>If you're working on something and could use a pixel pushing hand or two - use the contact button above to get in touch!</p>
+          <p>If you're working on something and could use a pixel pushing hand or two - use the contact button above to get in touch!</p>
         </div>
-      </div>
-      <div class="row">
-        <hr>
       </div>
     </div>
-    <div class="container-fluid">
-      <div class="col-lg-8 col-lg-offset-2 p-y-3">
-        <h2>DISCLAIMER: This website is very much under construction.</h2>
-      </div>
-      <div class="col-lg-2 col-lg-offset-2">
-        <div class="card"><img src="img/Recent/Apple Watch.png" alt="" class="card-img-top img-fluid">
-          <div class="card-block">
-            <h4 class="card-title">Coach</h4>
-            <p class="card-text">Lorem ipsum</p>
-            <p class="card-text"><small class="text-muted">Design, 2015</small></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-2">
-        <div class="card"><img src="img/Recent/Sunrise.png" alt="" class="card-img-top img-fluid">
-          <div class="card-block">
-            <h4 class="card-title">Sunrise</h4>
-            <p class="card-text">Lorem ipsum</p>
-            <p class="card-text"><small class="text-muted">Design, 2015</small></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-2">
-        <div class="card"><img src="img/Recent/Ball.png" alt="" class="card-img-top img-fluid">
-          <div class="card-block">
-            <h4 class="card-title">Ball</h4>
-            <p class="card-text">Lorem ipsum</p>
-            <p class="card-text"><small class="text-muted">Design, 2016</small></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-2">
-        <div class="card"><img src="img/Recent/22.png" alt="" class="card-img-top img-fluid">
-          <div class="card-block">
-            <h4 class="card-title">22, A Million</h4>
-            <p class="card-text">Lorem ipsum</p>
-            <p class="card-text"><small class="text-muted">Design, 2016</small></p>
-          </div>
-        </div>
-      </div>
+    <!--_ include includes/index/recent-->
+    <div class="col-lg-12 footer bg-warning p-t-1">
+      <p class="text-xs-center p-y-1">&copy; GUSTAV KJELLIN DESIGN 2016</p>
     </div>
     <!-- jQuery first, then Bootstrap JS.-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
