--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
       <div class="row">
         <div class="col-lg-4 col-lg-offset-4">
           <h4 class="p-b-1">Welcome to my portfolio!</h4>
-          <p>I make design stuff for websites, print and advertisement. Below are some of the things I've worked on.</p>
-          <p>If you're working on something and could use a pixel pushing hand or two - use the contact button above to get in touch!</p>
+          <p>I make design stuff for websites, print and advertisement. As luck would have it, I've been fairly swamped in work recently, so this page hasn't gotten a ton of love. If you're looking for something along the lines of a portfolio, I'd head over to my Dribbble. Or send me an email and we'll grab a coffee or something - I love to talk about my work.</p>
           <p>If you're working on something and could use a pixel pushing hand or two - use the contact button above to get in touch!</p>
         </div>
       </div>
