Add new version

--- a/logos.html
+++ b/logos.html
@@ -26,7 +26,25 @@
       </div>
       <div class="row orange-strip"></div>
     </div>
-    <!--_ include includes/index/banner-->
+    <div class="col-lg-12 p-y-2">
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/1 Gojord.png" class="img-fluid"></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/2 Coach.png" class="img-fluid"></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/3 Kullander Jansson.png" class="img-fluid"></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/4 Life Science IP Experts.png" class="img-fluid"></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/5 Swatches.png" class="img-fluid"></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/6 GKD.png" class="img-fluid"></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/7 GD Tour.png" class="img-fluid"></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/8 Cali.png" class="img-fluid"></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/9 Floorball 4 All.png" class="img-fluid"></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/10 DC Comics.png" class="img-fluid"></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/11 Crowio.png" class="img-fluid"></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/12 Pluggaonline.png" class="img-fluid"></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/13 Anton.png" class="img-fluid"></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/14 Industriell Ekonomi.png" class="img-fluid"></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/15 Teater Fenestra.png" class="img-fluid"></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/16 Susanne Kjellin Yoga.png" class="img-fluid"></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 p-y-1"><img src="img/logos/17 I-Alumni.png" class="img-fluid"></div>
+    </div>
     <div class="col-lg-12 text-xs-center p-y-2">
       <div class="row"><a href="logos.html" class="index-links">Logos</a></div>
       <div class="row"><a href="#" class="index-links strikethrough">Print</a></div>
