--- a/about.html
+++ b/about.html
@@ -10,13 +10,11 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/custom.css">
     <!-- Favicon import-->
-    <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="img/favicons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="img/favicons/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="img/favicons/manifest.json">
-    <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#222222">
-    <link rel="shortcut icon" href="img/favicons/favicon.ico">
-    <meta name="msapplication-config" content="img/favicons/browserconfig.xml">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa963">
     <meta name="theme-color" content="#ffffff">
   </head>
   <body id="about"></body>
@@ -47,8 +45,17 @@
     </div>
     <div class="col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-0 col-lg-2 p-t-1"><img src="img/Profile.jpg" class="img-fluid"></div>
   </div>
-  <div class="col-lg-12 footer bg-warning p-t-1">
-    <p class="text-xs-center p-y-1">&copy; GUSTAV KJELLIN DESIGN 2016
+  <div class="col-lg-12 footer bg-warning p-t-1 hidden-md-down">
+    <div class="col-md-4">
+      <p class="p-y-1">WEBSITE REVISIT No. 03</p>
+    </div>
+    <div class="col-md-4 bg-muted"><a href="index.html" class="logotype-hover"><img src="img/Logotype White.svg" class="img-fluid center-block"></a></div>
+    <div class="col-md-4">
+      <p class="text-xs-right p-y-1">&copy; GUSTAV KJELLIN DESIGN, 2017</p>
+    </div>
+  </div>
+  <div class="col-lg-12 footer bg-warning p-y-1 hidden-lg-up">
+    <p class="text-xs-center p-t-1">&copy; GUSTAV KJELLIN DESIGN, 2017
       <!-- jQuery first, then Bootstrap JS.-->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js"></script>
