--- a/logos.html
+++ b/logos.html
@@ -17,9 +17,8 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa963">
     <meta name="theme-color" content="#ffffff">
   </head>
-  <body id="home">
+  <body>
     <div class="col-lg-12 text-xs-center">
-      <div class="col-lg-12 bg-warning"></div>
       <div class="row orange-strip"></div>
       <div class="row p-y-3"><a href="index.html" class="logotype-hover"><img src="img/Logotype.svg" class="img-fluid center-block"></a>
         <h6 class="logotype-text p-t-2">Gustav Kjellin Design</h6>
