--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
   <head>
-    <title>Gustav Kjellin Design - Logos</title>
+    <title>Gustav Kjellin Design - Contact</title>
     <!-- Required meta tags-->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -32,26 +32,22 @@
       </div>
       <div class="row color-strip bg-primary"></div>
     </div>
-    <div class="container-fluid py-3">
-      <div class="row">
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/1 Gojord.png" class="img-fluid"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/2 Coach.png" class="img-fluid"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/3 Kullander Jansson.png" class="img-fluid"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/4 Life Science IP Experts.png" class="img-fluid"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/5 Swatches.png" class="img-fluid"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/6 GKD.png" class="img-fluid"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/7 GD Tour.png" class="img-fluid"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/8 Cali.png" class="img-fluid"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/9 Floorball 4 All.png" class="img-fluid"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/10 DC Comics.png" class="img-fluid"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/11 Crowio.png" class="img-fluid"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/12 Pluggaonline.png" class="img-fluid"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/13 Anton.png" class="img-fluid"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/14 Industriell Ekonomi.png" class="img-fluid"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/15 Teater Fenestra.png" class="img-fluid"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/16 Susanne Kjellin Yoga.png" class="img-fluid"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3 py-3"><img src="img/logos/17 I-Alumni.png" class="img-fluid"></div>
-      </div>
+    <div class="container">
+      <form class="col-lg-6 col-lg-offset-3 p-y-3">
+        <div class="form-group">
+          <label for="exampleInputFirstName1">First name</label>
+          <input type="name" placeholder="First name" id="exampleInputFirstName1" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputLastName1">Last name</label>
+          <input type="name" placeholder="Last name" id="exampleInputLastName1" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" aria-describedby="emailHelp" placehpolder="Enter email" id="exampleInputEmail1" class="form-control"><small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else.</small>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
     </div>
     <div class="container-fluid text-center py-5">
       <div class="row">
