--- a/index.html
+++ b/index.html
@@ -49,26 +49,18 @@
         <div class="col"><a href="contact.html" class="index-links strikethrough">Contact</a></div>
       </div>
     </div>
-    <div class="container">
+    <div class="container hidden-sm-down py-5">
       <div class="row">
-        <div class="col-lg-4 py-5">
-          <div class="row">
-            <div id="currentPantone" class="col-lg-4 bg-primary"></div>
-            <div class="col-lg-8 py-4">
-              <p class="text-muted">CURRENT COLOR</p>
-              <h5>PANTONE 714 C</h5>
-            </div>
-          </div>
+        <div id="currentPantone" class="col-md-2 col-xs-1 bg-primary"></div>
+        <div class="col-md-4 col-xs-5 py-4">
+          <p class="text-muted">CURRENT COLOR</p>
+          <h5>PANTONE 714 C</h5>
         </div>
-        <div class="col-lg-4 offset-lg-4 py-5">
-          <div class="row">
-            <div class="col-lg-8 py-4 text-right">
-              <p class="text-muted">NEXT COLOR</p>
-              <h5>PANTONE 7699 C</h5>
-            </div>
-            <div id="pantone" class="col-lg-4 bg-next"></div>
-          </div>
+        <div class="col-md-4 col-xs-5 py-4 text-right">
+          <p class="text-muted">NEXT COLOR</p>
+          <h5>PANTONE 7699 C</h5>
         </div>
+        <div id="pantone" class="col-md-2 col-xs-1 bg-next"></div>
       </div>
     </div>
     <div class="container-fluid footer bg-primary py-3 hidden-md-down text-white">
